--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1"
@@ -14,6 +13,11 @@
 		<meta
 			name="description"
 			content="Web site created using create-react-app"
+		/>
+		<link
+			rel="shortcut icon"
+			href="./food.png"
+			type="image/x-icon"
 		/>
 
 		<title>Deliciouss</title>
